tests/errors/invalid_arg_count.re
fn t() {

}
fn main() {
    t(1);
}